feat(smtp): Add SMTP support

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,30 @@ STRIPE_PUBLISHABLE_KEY=pk_test_your_test_key_here
 STRIPE_SECRET_KEY=sk_test_your_test_secret_here
 STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
 
-# Email Service (Resend - get from https://resend.com/api-keys)
+# Email Service
+# You can pick between SMTP, Resend and Console.
+# If you pick Resend, you will have to configure the API key.
+# If you pick SMTP, you will have to configure the credentials.
+# No further setup is required for console, but it's for development ONLY.
+# Valid options: smtp, resend, console
+MAIL_PROVIDER=
+
+# Email Services - SMTP
+# Hostname/IP of your SMTP server
+SMTP_HOST=
+# 587 - STARTTLS
+# 465 - SMTPS
+SMTP_PORT=
+# * IF YOU ARE UNSURE, USE FALSE! *
+# * ONLY SET TO TRUE IF YOU ARE USING SMTPS! *
+# * IF YOU ARE USING STARTTLS (aka port 587), USE FALSE! *
+SMTP_SECURE=false
+# SMTP username
+SMTP_USER=
+# SMTP password
+SMTP_PASS=
+
+# Email Services - Resend
 RESEND_API_KEY=re_your_resend_api_key_here
 
 # File Storage Provider (set in src/config/site.ts or override here)
