--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@upstash/redis": "^1.35.1",
     "astro": "^5.12.3",
     "js-yaml": "^4.1.0",
+    "nodemailer": "^7.0.5",
     "resend": "^4.7.0",
     "sharp": "^0.34.3",
     "stripe": "^18.3.0"
