--- a/.env.example
+++ b/.env.example
@@ -10,14 +10,30 @@ STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
 RESEND_API_KEY=re_your_resend_api_key_here
 
 # File Storage Provider (set in src/config/site.ts or override here)
-# FILE_STORAGE_PROVIDER=cloudflare-r2  # or "bunny-net" or "local"
+# Options: s3, bunny-net, local
+FILE_STORAGE_PROVIDER=s3  # or "bunny-net" or "local"
 
-# Cloudflare R2 (recommended for free tier)
-R2_ACCESS_KEY_ID=your_r2_access_key_here
-R2_SECRET_ACCESS_KEY=your_r2_secret_key_here
-R2_BUCKET_NAME=your_r2_bucket_name
-R2_ACCOUNT_ID=your_r2_account_id
-# R2_CUSTOM_DOMAIN=https://your-custom-domain.com (optional)
+# S3 Configuration
+
+# S3 Providers
+# aws - Amazon Web Services S3
+# r2 - Cloudflare R2
+# backblaze - Backblaze B2
+# custom - BYOS3 (Bring Your Own S3)
+### *** Note for R2 users, to use your custom domain, you will have to set this to "custom" and put your custom domain in S3_ENDPOINT. ***
+S3_PROVIDER=aws
+
+# S3 Endpoint
+# Only used if the provider is "custom"
+# S3_ENDPOINT=
+
+# Access Key ID, Secret Access Key and Bucket Name are general throughout all S3 providers
+S3_ACCESS_KEY_ID=your_s3_access_key_here
+S3_SECRET_ACCESS_KEY=your_s3_secret_key_here
+S3_BUCKET_NAME=your_s3_bucket_name
+
+# R2 Account ID, *required for R2.*
+# R2_ACCOUNT_ID=your_r2_account_id
 
 # Bunny.net CDN (alternative)
 # BUNNY_API_KEY=your_bunny_api_key_here
