fix(resend): default to resend in example env

--- a/.env.example
+++ b/.env.example
@@ -12,25 +12,32 @@ STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
 # If you pick SMTP, you will have to configure the credentials.
 # No further setup is required for console, but it's for development ONLY.
 # Valid options: smtp, resend, console
-MAIL_PROVIDER=
-
-# Email Services - SMTP
-# Hostname/IP of your SMTP server
-SMTP_HOST=
-# 587 - STARTTLS
-# 465 - SMTPS
-SMTP_PORT=
-# * IF YOU ARE UNSURE, USE FALSE! *
-# * ONLY SET TO TRUE IF YOU ARE USING SMTPS! *
-# * IF YOU ARE USING STARTTLS (aka port 587), USE FALSE! *
-SMTP_SECURE=false
-# SMTP username
-SMTP_USER=
-# SMTP password
-SMTP_PASS=
+MAIL_PROVIDER=resend
 
 # Email Services - Resend
 RESEND_API_KEY=re_your_resend_api_key_here
+
+# Email Services - SMTP
+# Only fill these out if your MAIL_PROVIDER is SMTP!
+
+# Hostname/IP of your SMTP server
+# SMTP_HOST=
+
+# Port of your SMTP server
+# 587 - STARTTLS
+# 465 - SMTPS
+# SMTP_PORT=
+
+# * IF YOU ARE UNSURE, USE FALSE! *
+# * ONLY SET TO TRUE IF YOU ARE USING SMTPS! *
+# * IF YOU ARE USING STARTTLS (aka port 587), USE FALSE! *
+# SMTP_SECURE=false
+
+# SMTP username
+# SMTP_USER=
+
+# SMTP password
+# SMTP_PASS=
 
 # File Storage Provider (set in src/config/site.ts or override here)
 # FILE_STORAGE_PROVIDER=cloudflare-r2  # or "bunny-net" or "local"
